--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
                 <ul type="none">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="milk.html">Milk&Dairy</a></li>
-                    <li><a href="biscuits.html">biscuit</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Sweets.html">Sweets&Biscuits</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
                 </nav>
@@ -70,8 +70,9 @@
         <section class="footer">
             <h1>Diroz <font>Company</font></h1>
             <div class="tile">
-                <p>Phone Number: &nbsp; <a style="color: black;" href="tel:07504583387">0750 4583 387</a>&nbsp;
-                    - &nbsp; <a style="color: black;" href="tel:07724504000">0772 450 4000</a>
+                <p>Phone Number: &nbsp; <a style="color: black;" href="tel:07504671008">0750 467 1008</a>&nbsp;
+                    - &nbsp; <a style="color: black;" href="tel:07503971877">0750 397 1877</a>
+                    - &nbsp; <a style="color: black;" href="tel:07504583387">0750 4583 387</a>
                 </p>
                 <br>
                 <p>Address:- Ibrahim  Khalil  Road,  Zakho, Iraq
