--- a/contact.html
+++ b/contact.html
@@ -244,8 +244,8 @@ main h2{
                 <ul type="none">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="milk.html">Milk&Dairy</a></li>
-                    <li><a href="biscuits.html">biscuit</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Sweets.html">Sweets&Biscuits</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
                 </nav>
@@ -263,30 +263,30 @@ main h2{
                  <!--1-->
                  <div class="pd">
                     <div class="titl">
-                        Sulaiman
+                        Sulaiman Haji
                     </div>
                     <div class="bt">
-                        <button><a style="text-decoration: none; color: black;" href="tel:+96407504671008">Phone Call</a></button>
+                        <button><a style="text-decoration: none; color: black;" href="tel:07504671008">Phone Call</a></button>
                     </div>
                 </div>
                         <!--3-->
-                        <h2>Manager Of biscuit</h2>
+                        <h2>Manager Of Sweets & Biscuits</h2>
                  <div class="pd">
                     <div class="titl">
                        Salah Shafiq
                     </div>
                     <div class="bt">
-                        <button><a style="text-decoration: none; color: black;" href="tel:+96407503971877">Phone Call</a></button>
+                        <button><a style="text-decoration: none; color: black;" href="tel:07503971877">Phone Call</a></button>
                     </div>
                 </div>
                     <!--4-->
                     <h2>Manager Of milk & dairy </h2>
                     <div class="pd">
                         <div class="titl">
-                            Amjad
+                            Amjad Haji
                         </div>
                         <div class="bt">
-                            <button><a style="text-decoration: none; color: black;" href="tel:+96407504583387">Phone Call</a></button>
+                            <button><a style="text-decoration: none; color: black;" href="tel:07504583387">Phone Call</a></button>
                         </div>
                     </div>
             
@@ -296,8 +296,9 @@ main h2{
                <section class="footer">
                 <h1>Diroz <font>Company</font></h1>
                 <div class="tile">
-                    <p>Phone Number: &nbsp; <a style="color: black;" href="tel:07504583387">0750 4583 387</a>&nbsp;
-                        - &nbsp; <a style="color: black;" href="tel:07724504000">0772 450 4000</a>
+                    <p>Phone Number: &nbsp; <a style="color: black;" href="tel:07504671008">0750 467 1008</a>&nbsp;
+                        - &nbsp; <a style="color: black;" href="tel:07503971877">0750 397 1877</a>
+                        - &nbsp; <a style="color: black;" href="tel:07504583387">0750 4583 387</a>
                     </p>
                     <br>
                     <p>Address:- Ibrahim  Khalil  Road,  Zakho, Iraq
