--- a/milk.html
+++ b/milk.html
@@ -19,7 +19,7 @@
                 <ul type="none">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="milk.html">Milk&Dairy</a></li>
-                    <li><a href="Sweets.html">Sweets&Biscuits</a></li>
+                    <li><a href="sweets.html">Sweets&Biscuits</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
