--- a/about.html
+++ b/about.html
@@ -53,6 +53,18 @@
         <!--image-->
 
         <div class="tt">
+            <img src="images/dirozz.jpg"/>
+        </div>
+
+        <div class="tt">
+            <img src="images/dirozbc.jpg"/>
+        </div>
+
+        <div class="tt">
+            <img src="images/pradalal.jpg"/>
+        </div>
+
+        <div class="tt">
             <img src="images/dsc.jpg"/>
         </div>
 
