--- a/about.html
+++ b/about.html
@@ -36,13 +36,14 @@
             </div>
             <div class="titl">
                 <p>
-                    Diroz Compnay Has Been Created in 2014. 
+                   Welcome to Diroz Company where we bring you a delightful blend of tradition and innovation in every dairy product and sweet we create.
+                   <br>
+                    Established with a passion for crafting indulgent
                     <br>
-                    Diroz Company work with Milk And Dairy Product And Biscuit.
-                    <br> 
-                    Diroz Company Our Product From Turkey ,  Ukraine , Italy,  Hungary,  Poland,  Egypt.
-                    <br>
-                    We Are General Agency Of Iraq.
+                     treats that captivate the senses, we take pride in offering a wide range of high-quality and 
+                   <br>
+                   delicious products that cater to the 
+                   <br>diverse tastes of our customers.
 
 
                     
@@ -98,6 +99,8 @@
             </div>
             <div class="ptp">
                 <p>Diroz Company © 2014 | All Rights Reserved
+                </p>
+                <p>Developed By: Alan Salah
                 </p>
             </div>
         </section>
