--- a/contact.html
+++ b/contact.html
@@ -313,6 +313,8 @@ main h2{
                 <div class="ptp">
                     <p>Diroz Company © 2014 | All Rights Reserved
                     </p>
+                    <p>Developed By: Alan Salah
+                    </p>
                 </div>
             </section>
 
