--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
             <div class="ptp">
                 <p>Diroz Company © 2014 | All Rights Reserved
                 </p>
+                <p>Developed By: Alan Salah
+                </p>
             </div>
+           
         </section>
 
 
