--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@ nav{
 
         <div class="bg">
             <div class="logo">
-                <img src="image/asd.jpg" alt="" height="130px" width="130"  style="border-radius: 50%; margin-top: 20px;  box-shadow: white 0px 0px 20px;">
+                <img src="asd.jpg" alt="" height="130px" width="130"  style="border-radius: 50%; margin-top: 20px;  box-shadow: white 0px 0px 20px;">
             </div>
             
             <div class="title">
