--- a/milk.html
+++ b/milk.html
@@ -299,53 +299,53 @@ h3{
 
 
         <div class="product-template">
-            <img src="image/mozzarelakan2.jpg" alt=""
+            <img src="mozzarelakan2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">GRATED MOZZARELLA CHEESE 1KG</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/sudamozz.jpg" alt=""
+            <img src="sudamozz.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Kaanlar Suda <br>Mozzarella
                 120g x 12</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/mozzpeynar.jpg" alt=""
+            <img src="mozzpeynar.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Kaanlar mozzarella<br> Cheese
                 200g x 24</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/kasertaze.jpg" alt=""
+            <img src="kasertaze.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">THRACE FULL FAT <br>KASHAR CHEESE 400G</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/kaanlarkoy.jpg" alt=""
+            <img src="kaanlarkoy.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Kaanlar üçgen <br>Taze
                 650g x 8</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/kaanlarbeyaz.jpg" alt=""
+            <img src="kaanlarbeyaz.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">SPREADABLE WHITE <br>
                 CHEESE 180G</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/kaanlarlabne.jpg" alt=""
+            <img src="kaanlarlabne.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">LABNE CHEESE 180G</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/kaanlarciftlik.jpg" alt=""
+            <img src="kaanlarciftlik.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Farm Full Fat White<br> Cheese 600G</h2>
         </div>
@@ -353,130 +353,130 @@ h3{
 
 
         <div class="product-template">
-            <img src="image/cream1.jpg" alt=""
+            <img src="cream1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream Valley 80g x 24</h2>
         </div>
 
 
         <div class="product-template">
-            <img src="image/cream2.jpg" alt=""
+            <img src="cream2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream Valley 80g x 24</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/cream3.jpg" alt=""
+            <img src="cream3.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream Valley 80g x 24</h2>
         </div>
 
 
         <div class="product-template">
-            <img src="image/cream4.jpg" alt=""
+            <img src="cream4.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream Valley 80g x 24</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbn3.jpg" alt=""
+            <img src="jbn3.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 64g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbn2.jpg" alt=""
+            <img src="jbn2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 64g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbn1.jpg" alt=""
+            <img src="jbn1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 64g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbn5.jpg" alt=""
+            <img src="jbn5.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 64g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbn4.jpg" alt=""
+            <img src="jbn4.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 64g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbl1.jpg" alt=""
+            <img src="jbl1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 90g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbl2.jpg" alt=""
+            <img src="jbl2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 90g x 60</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/jbl3.jpg" alt=""
+            <img src="jbl3.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Cream 90g x 60</h2>
         </div>
         
 
         <div class="product-template">
-            <img src="image/bakractaze.jpg" alt=""
+            <img src="bakractaze.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Bakraç Taze <br> kasar
                 1000g x 12</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/bakracotlu.jpg" alt=""
+            <img src="bakracotlu.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Bakraç Otlu <br> peynir
                 200g x 24</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/peynir.jpg" alt=""
+            <img src="peynir.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Bakraç Tel peyniri<br>
                 200g x 12</h2>
         </div>
         <div class="product-template">
-            <img src="image/peynir2.jpg" alt=""
+            <img src="peynir2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Bakraç örgü peyniri<br>
                 200g x 12</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/seyber1.jpg" alt=""
+            <img src="seyber1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Seyber Shallal <br> Cheese
                 180g x 12</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/seyber2.jpg" alt=""
+            <img src="seyber2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Seyber Cheese Finger<br>
                 180g x 12</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/seyber3.jpg" alt=""
+            <img src="seyber3.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Seyber Qaymar <br>
                 100g x 24</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/seyber4.jpg" alt=""
+            <img src="seyber4.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 style="font-size: 17px;">Seyber
                 65g x 6</h2>
