--- a/sweets.html
+++ b/sweets.html
@@ -291,44 +291,44 @@ nav{
 
 
         <div class="product-template">
-            <img src="image/lavera2.jpg" alt=""
+            <img src="lavera2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Lavera Biscuits 44g</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/dance1.jpg" alt=""
+            <img src="dance1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>dance Coconut Cream</h2>
         </div>
 
 
         <div class="product-template">
-            <img src="image/wizo.jpg" alt=""
+            <img src="wizo.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Wizo</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/pinkpie.jpg" alt=""
+            <img src="pinkpie.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>PinkPie</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/damarose.jpg" alt=""
+            <img src="damarose.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Dama Rose Biscuits</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/laveraxxl.jpg" alt=""
+            <img src="laveraxxl.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Lavera Dance XXL</h2>
         </div>
 
         <div class="product-template">
-            <img src="image/mamu.jpg" alt=""
+            <img src="mamu.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Mamuto Biscuits 28g</h2>
         </div>
