--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ h3{
         </div>
         
         <div class="bg">
-            <img src="image/backkan.jpg" alt="" width="100%"
+            <img src="backkan.jpg" alt="" width="100%"
             height="330" style="border-radius: 20px;">
         </div>
 
@@ -317,7 +317,7 @@ h3{
         <main>
 
         <div class="product-template">
-            <img src="image/pinkpie.jpg" alt=""
+            <img src="pinkpie.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2 >PinkPie</h2>
             <br>
@@ -327,7 +327,7 @@ h3{
 
 
         <div class="product-template">
-            <img src="image/Lavera2.jpg" alt=""
+            <img src="Lavera2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Lavera Biscuits 44g</h2>
             <br>
@@ -335,7 +335,7 @@ h3{
         </div>
 
         <div class="product-template">
-            <img src="image/mozzpeynar.jpg" alt=""
+            <img src="mozzpeynar.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Kaanlar mozzarella</h2>
             <br>
@@ -344,7 +344,7 @@ h3{
 
 
         <div class="product-template">
-            <img src="image/bakractaze.jpg" alt=""
+            <img src="bakractaze.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Bakraç Taze</h2>
             <br>
