--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ h3{
 
 
         <div class="product-template">
-            <img src="Lavera2.jpg" alt=""
+            <img src="lavera2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Lavera Biscuits 44g</h2>
             <br>
@@ -369,10 +369,10 @@ h3{
             </div>
             <div class="icons">
                 <ul type="none">
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-telegram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href="https://www.instagram.com/diroz_company?igsh=MWw1MnZ1eThneWJ2cw=="><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100072146558168&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://t.me/@sulaiman_hajan"><i class="fa-brands fa-telegram"></i></a></li>
+                    <li><a href="https://wa.me/07504671008"><i class="fa-brands fa-whatsapp"></i></a></li>
                 </ul>
             </div>
 
