--- a/sweets.html
+++ b/sweets.html
@@ -351,10 +351,10 @@ nav{
             </div>
             <div class="icons">
                 <ul type="none">
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-telegram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href="https://www.instagram.com/diroz_company?igsh=MWw1MnZ1eThneWJ2cw=="><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100072146558168&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-telegram"></i></a></li>
+                    <li><a href="https://wa.me/07503971877"><i class="fa-brands fa-whatsapp"></i></a></li>
                 </ul>
             </div>
 
