--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             margin: auto;
             margin-left: 40px;
         }
-        .navbar  ul{
+        .navbar  .ul1{
             margin: auto;
             display: flex;
             color: white;
           
         }
-        .navbar  li{
+        .navbar  .li2{
             margin-left: 30px;
             font-weight: 900;
             background-color: #ffffff;
@@ -128,7 +128,7 @@
     text-decoration: none;
 }
 
-.nav ul{
+.nav .ul1{
     display: flex;
     margin: auto;
     margin-top: 20px;
@@ -136,11 +136,11 @@
     
 }
 
-.nav li{
+.nav .li2{
     margin: 10px;
 }
 
-.nav li a{
+.nav .li2 a{
     padding: 5px;
     background-color: white;
     border-radius: 10px;
@@ -156,7 +156,7 @@
     display: none;
 }
 
-@media screen and (max-width:780px) {
+@media screen and (max-width:1100px) {
 
 .navbar{
     width: 100%;
@@ -238,12 +238,12 @@ nav{
     border-radius: 0 0 0 50%;
     text-align: center;
 }
-.nav ul{
+.nav .ul1{
     display: flex;
     flex-direction: column;
     margin-top: 70px;
 }
-.nav li a{
+.nav .li2 a{
 
     color: black;
 }
@@ -296,12 +296,15 @@ h3{
             <h1>Diroz Company</h1>
             <nav class="nav" id="nav-menu">
                 <ion-icon name="close-outline" class="header__close" id="close-menu"></ion-icon>
-                <ul type="none">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="milk.html">Milk&Dairy</a></li>
-                    <li><a href="sweets.html">Sweets&Biscuits</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                <ul class="ul1" type="none">
+                    <li class="li2"><a href="index.html">Home</a></li>
+                    <li class="li2"><a href="sweets.html">Sweets&Biscuits</a></li>
+                    <li class="li2"><a href="bakrac.html">bakraç</a></li>
+                    <li class="li2"><a href="kaanlar.html">kaanlar</a></li>
+                    <li class="li2"><a href="seyber.html">seyber</a></li>
+                    <li class="li2"><a href="bako.html">Bako</a></li>
+                    <li class="li2"><a href="contact.html">Contact Us</a></li>
+                    <li class="li2"><a href="about.html">About Us</a></li>
                 </ul>
                 </nav>
                 <ion-icon name="menu-outline" class="header__toggle" id="toggle-menu"></ion-icon>
@@ -327,9 +330,9 @@ h3{
 
 
         <div class="product-template">
-            <img src="lavera2.jpg" alt=""
+            <img src="bako1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
-            <h2>Lavera Biscuits 44g</h2>
+            <h2>Bako</h2>
             <br>
             <h2 style="font-size: 17px;"><a href="sweets.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
         </div>
@@ -337,7 +340,7 @@ h3{
         <div class="product-template">
             <img src="mozzpeynar.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
-            <h2>Kaanlar mozzarella</h2>
+            <h2>Kaanlar</h2>
             <br>
             <h2 style="font-size: 17px;"><a href="milk.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
         </div>
@@ -346,7 +349,7 @@ h3{
         <div class="product-template">
             <img src="bakractaze.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
-            <h2>Bakraç Taze</h2>
+            <h2>Bakraç</h2>
             <br>
             <h2 style="font-size: 17px;"><a href="milk.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
         </div>
