--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
             margin: auto;
             margin-left: 40px;
         }
-        .navbar  ul{
+        .navbar  .ul1{
             margin: auto;
             display: flex;
             color: white;
           
         }
-        .navbar  li{
+        .navbar  .li2{
             margin-left: 30px;
             font-weight: 900;
             background-color: #ffffff;
@@ -130,7 +130,7 @@
     text-decoration: none;
 }
 
-.nav ul{
+.nav .ul1{
     display: flex;
     margin: auto;
     margin-top: 20px;
@@ -138,11 +138,11 @@
     
 }
 
-.nav li{
+.nav .li2{
     margin: 10px;
 }
 
-.nav li a{
+.nav .li2 a{
     padding: 5px;
     background-color: white;
     border-radius: 10px;
@@ -158,7 +158,7 @@
     display: none;
 }
 
-@media screen and (max-width:780px) {
+@media screen and (max-width:1100px) {
 
 .navbar{
     width: 100%;
@@ -213,12 +213,12 @@ nav{
     border-radius: 0 0 0 50%;
     text-align: center;
 }
-.nav ul{
+.nav .ul1{
     display: flex;
     flex-direction: column;
     margin-top: 70px;
 }
-.nav li a{
+.nav .li2 a{
 
     color: black;
 }
@@ -264,12 +264,15 @@ h2{
             <h1>Diroz Company</h1>
             <nav class="nav" id="nav-menu">
                 <ion-icon name="close-outline" class="header__close" id="close-menu"></ion-icon>
-                <ul type="none">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="milk.html">Milk&Dairy</a></li>
-                    <li><a href="sweets.html">Sweets&Biscuits</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                <ul class="ul1" type="none">
+                    <li class="li2"><a href="index.html">Home</a></li>
+                    <li class="li2"><a href="sweets.html">Sweets&Biscuits</a></li>
+                    <li class="li2"><a href="bakrac.html">bakraç</a></li>
+                    <li class="li2"><a href="kaanlar.html">kaanlar</a></li>
+                    <li class="li2"><a href="seyber.html">seyber</a></li>
+                    <li class="li2"><a href="bako.html">Bako</a></li>
+                    <li class="li2"><a href="contact.html">Contact Us</a></li>
+                    <li class="li2"><a href="about.html">About Us</a></li>
                 </ul>
                 </nav>
                 <ion-icon name="menu-outline" class="header__toggle" id="toggle-menu"></ion-icon>
