--- a/about.html
+++ b/about.html
@@ -314,6 +314,7 @@ nav{
                     <li class="li2"><a href="index.html">Home</a></li>
                     <li class="li2"><a href="sweets.html">Sweets&Biscuits</a></li>
                     <li class="li2"><a href="bakrac.html">bakraç</a></li>
+                    <li class="li2"><a href="cheese.html">cheese</a></li>
                     <li class="li2"><a href="kaanlar.html">kaanlar</a></li>
                     <li class="li2"><a href="seyber.html">seyber</a></li>
                     <li class="li2"><a href="bako.html">Bako</a></li>
