--- a/bakrac.html
+++ b/bakrac.html
@@ -284,11 +284,7 @@ h3{
                 <ul class="ul1" type="none">
                     <li class="li2"><a href="index.html">Home</a></li>
                     <li class="li2"><a href="sweets.html">Sweets&Biscuits</a></li>
-                    <li class="li2"><a href="bakrac.html">bakraç</a></li>
-                    <li class="li2"><a href="cheese.html">cheese</a></li>
-                    <li class="li2"><a href="kaanlar.html">kaanlar</a></li>
-                    <li class="li2"><a href="seyber.html">seyber</a></li>
-                    <li class="li2"><a href="bako.html">Bako</a></li>
+                    <li class="li2"><a href="cheesebd.html">cheese</a></li>
                     <li class="li2"><a href="contact.html">Contact Us</a></li>
                     <li class="li2"><a href="about.html">About Us</a></li>
                 </ul>
@@ -303,6 +299,17 @@ h3{
 
 
 
+        <div class="product-template">
+            <img src="bakracpey.jpg" alt=""
+            width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
+            <h2 style="font-size: 17px;">Bakraç 500g </h2>
+        </div>
+
+        <div class="product-template">
+            <img src="bakracmoz.jpg" alt=""
+            width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
+            <h2 style="font-size: 17px;">Bakraç Mozzarella <br> 200ml</h2>
+        </div>
         
 
         <div class="product-template">
