--- a/index.html
+++ b/index.html
@@ -299,11 +299,7 @@ h3{
                 <ul class="ul1" type="none">
                     <li class="li2"><a href="index.html">Home</a></li>
                     <li class="li2"><a href="sweets.html">Sweets&Biscuits</a></li>
-                    <li class="li2"><a href="bakrac.html">bakraç</a></li>
-                    <li class="li2"><a href="cheese.html">cheese</a></li>
-                    <li class="li2"><a href="kaanlar.html">kaanlar</a></li>
-                    <li class="li2"><a href="seyber.html">seyber</a></li>
-                    <li class="li2"><a href="bako.html">Bako</a></li>
+                    <li class="li2"><a href="cheesebd.html">cheese</a></li>
                     <li class="li2"><a href="contact.html">Contact Us</a></li>
                     <li class="li2"><a href="about.html">About Us</a></li>
                 </ul>
@@ -335,7 +331,7 @@ h3{
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Bako</h2>
             <br>
-            <h2 style="font-size: 17px;"><a href="sweets.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
+            <h2 style="font-size: 17px;"><a href="bako.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
         </div>
 
         <div class="product-template">
@@ -343,7 +339,7 @@ h3{
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Kaanlar</h2>
             <br>
-            <h2 style="font-size: 17px;"><a href="milk.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
+            <h2 style="font-size: 17px;"><a href="kaanlar.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
         </div>
 
 
@@ -352,7 +348,7 @@ h3{
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
             <h2>Bakraç</h2>
             <br>
-            <h2 style="font-size: 17px;"><a href="milk.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
+            <h2 style="font-size: 17px;"><a href="bakrac.html" style="background-color: white; color: black; text-decoration: none; border-radius: 3px; padding: 3px;">More Product</a></h2>
         </div>
 
 
