--- a/bako.html
+++ b/bako.html
@@ -284,11 +284,7 @@ h3{
                 <ul class="ul1" type="none">
                     <li class="li2"><a href="index.html">Home</a></li>
                     <li class="li2"><a href="sweets.html">Sweets&Biscuits</a></li>
-                    <li class="li2"><a href="bakrac.html">bakraç</a></li>
-                    <li class="li2"><a href="cheese.html">cheese</a></li>
-                    <li class="li2"><a href="kaanlar.html">kaanlar</a></li>
-                    <li class="li2"><a href="seyber.html">seyber</a></li>
-                    <li class="li2"><a href="bako.html">Bako</a></li>
+                    <li class="li2"><a href="cheesebd.html">cheese</a></li>
                     <li class="li2"><a href="contact.html">Contact Us</a></li>
                     <li class="li2"><a href="about.html">About Us</a></li>
                 </ul>
@@ -304,18 +300,18 @@ h3{
         <div class="product-template">
             <img src="bako1.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
-            <h2 style="font-size: 17px;">Bako 650g * 10</h2>
+            <h2 style="font-size: 17px;">Bako 650g * 12</h2>
         </div>
 
         <div class="product-template">
             <img src="bako2.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
-            <h2 style="font-size: 17px;">Bako 650g * 10</h2>
+            <h2 style="font-size: 17px;">Bako 650g * 12</h2>
         </div>
         <div class="product-template">
             <img src="bako3.jpg" alt=""
             width="300px" height="240px" style="border-radius: 20px 20px 0px 0px;"/>
-            <h2 style="font-size: 17px;">Bako 650g * 10</h2>
+            <h2 style="font-size: 17px;">Bako 650g * 12</h2>
         </div>
 
 
